[package]
name = "DE666"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
infer = "0.15.0"
mime_guess = "2.0.4"
tao = { version = "0.24", default-features = false, features = [ "rwh_05" ] }
winit = "0.29.7"
wry = "0.35.1"
