[package]
name = "de666"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
image = "0.25.1"
infer = "0.15.0"
json = "0.12.4"
tao = { version = "0.24", default-features = false, features = [ "rwh_05" ] }
wry = "0.35.1"
